🍟✋ Checkpoint ./next.htm:28145908/219

--- a/next.htm
+++ b/next.htm
@@ -35,11 +35,11 @@ Next Steps
 <p>XHTML 1.0</p>
 <p>WHATWG HTML5</p>
 <p>W3C HTML5</p>
-<p>W3C Markup Validation Service </p>
+<p><b>W3C Markup Validation Service </b></p>
 <p>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</p>
-<p>Mozilla Developer Network </p>
+<p><b>Mozilla Developer Network</b> </p>
 <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
-<p>HTML5 Rocks </p>
+<p><b>HTML5 Rocks </b></p>
 <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
 
 </body>
