--- a/next.htm
+++ b/next.htm
@@ -23,9 +23,9 @@ Next Steps
 <p><em>Determine an area of focus, and start there</em>
   <br>There are a lot of areas of web design that you could specialize in, so I&rsquo;d recommend learning as much about them as you can, to determine which areas interest you. Then, spend as much time learning about your specific area of focus as possible. Once you achieve a level of proficiency, begin to branch out into other areas as well. </p>
 <p><em>Never stop learning</em>
-  The web is constantly evolving. Even if you become the absolute best there is in a specific field, chances are new techniques and approaches will come along within the year that will make your current skill set less desirable. Understand that being a good web designer means embracing the changing nature of the web.</p>
+  <br>The web is constantly evolving. Even if you become the absolute best there is in a specific field, chances are new techniques and approaches will come along within the year that will make your current skill set less desirable. Understand that being a good web designer means embracing the changing nature of the web.</p>
 <p><i>Break things!</i>
-  There is no better teacher than experience. Build and experiment constantly. Ask yourself, &ldquo;what would happen if I?...&rdquo; or &ldquo;wonder if I could build?...&rdquo; and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em>Always challenge yourself.</em></p>
+  <br>There is no better teacher than experience. Build and experiment constantly. Ask yourself, &ldquo;what would happen if I?...&rdquo; or &ldquo;wonder if I could build?...&rdquo; and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em>Always challenge yourself.</em></p>
 <b>Web Design Resources</b>
 <p>HTML related titles</p>
 <p><b>Web Design related titles</b></p>
