--- a/next.htm
+++ b/next.htm
@@ -6,8 +6,12 @@
 <link href="_css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-Comp 484 
-Next Steps
+<h1>
+  COMP 484
+  </h1>
+<h2>
+  Next Steps
+  </h2>
 <ul>
   <li><a href="intro.htm" title="Introduction to HTML">Introduction to HTML</a></li>
   <li><a href="syntax.htm" title="HTML syntax">HTML syntax</a></li>
