--- a/next.htm
+++ b/next.htm
@@ -30,15 +30,15 @@
   <br>The web is constantly evolving. Even if you become the absolute best there is in a specific field, chances are new techniques and approaches will come along within the year that will make your current skill set less desirable. Understand that being a good web designer means embracing the changing nature of the web.</p>
 <p><i>Break things!</i>
   <br>There is no better teacher than experience. Build and experiment constantly. Ask yourself, &ldquo;what would happen if I?...&rdquo; or &ldquo;wonder if I could build?...&rdquo; and then go out and build it. If you&rsquo;re like me, you&rsquo;ll fail a good bit of the time, but the process of trying things and breaking them will make you that much better. <em>Always challenge yourself.</em></p>
-<b>Web Design Resources</b>
-<p>HTML related titles</p>
+<h3>Web Design Resources</h3>
+<p><b>HTML related titles</b></p>
 <p><b>Web Design related titles</b></p>
-<p>HTML specifications </p>
+<p><b>HTML specifications </b></p>
 <p>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</p>
-<p>HTML 4.0</p>
-<p>XHTML 1.0</p>
-<p>WHATWG HTML5</p>
-<p>W3C HTML5</p>
+<p><b>HTML 4.0</b></p>
+<p><b>XHTML 1.0</b></p>
+<p><b>WHATWG HTML5</b></p>
+<p><b>W3C HTML5</b></p>
 <p><b>W3C Markup Validation Service </b></p>
 <p>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</p>
 <p><b>Mozilla Developer Network</b> </p>
